@@ -5,6 +5,7 @@ CHANGELOG Roundcube Webmail
 - Fix refreshing of drafts list when sending a message which was saved in meantime (#1490238)
 - Fix saving/sending emoticon images when assets_dir is set
 - Fix PHP fatal error when visiting Vacation interface and there's no sieve script yet
+- Fix setting max packet size for DB caches and check packet size also in shared cache
 
 RELEASE 1.1.0
 -------------
